--- a/style.css
+++ b/style.css
@@ -126,3 +126,33 @@ body {
 .app-download:nth-child(2) {
     background-image: url(img/botao-google-play.png);
 }
+
+/*Media queries*/
+
+@media (max-width: 1024px) {
+    .instagram-wapper {
+        width: 90%;
+    }
+}
+
+@media (max-width: 640px) {
+    body {
+        background: #ffffff;
+    }
+
+    .instagram-wapper {
+        width: 90%;
+    }
+
+    .instagram-phone {
+        display: none;
+    }
+
+    .instagram-continue {
+        width: 100%;
+    }
+
+    .group {
+        border: 1px solid transparent;
+    }
+}
